--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Maven_demo1</name>
+	<name>TrackoProject_using POM</name>
 	<comment></comment>
 	<projects>
 	</projects>
